<?xml version="1.0"?>
<package format="2">
    <name>direction_indicator</name>
    <version>0.1.0</version>
    <description>Direction indicator package for AMR navigation</description>
    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>audio_compass</depend>

    <export>
    </export>
</package>